# weav-ai-runtime

./: README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  deploy-docs-pages.yml
doc/: docusaurus.config.js
doc/src/pages/: index.md
tests/: test_apicred_adapter.py  test_runtime.py
weav_ai_runtime/: __init__.py  contracts.py  factory.py  result.py
weav_ai_runtime/adapters/: __init__.py  apicred.py
